# ET-RNET

./: .env.example  .env.sovereign.example  .gitignore  CLAUDE.md  DEPLOYMENT_v2.0.md  Dockerfile  LICENSE  README.md  capacitor.config.ts  compile-whitepaper.sh  docker-compose.sovereign.yml  docker-compose.yml  hardhat.config.ts  index.html  package-lock.json  package.json  setup.sh  tsconfig.json  vite.config.ts  vitest.config.ts  whitepaper.tex
.github/workflows/: ci-cd.yml  ci.yml
.openclaude/: settings.local.json
DOC/: Hydronia v8.txt  VOID_Conceito_App.docx  VØID·ΩMEGA.txt  void_app_ui.html  void_brand_hero.html  void_distancebridge.html  void_ghostid_engine.html  void_qel_protocol.html
android/: settings.gradle
android/app/: build.gradle
config/: rtl.json
contracts/: ETRNETAnchor.sol
public/: manifest.json  sw.js
quantum/: bb84.py  cqr_engine.py  lua_runtime.py  models.py  plugin_api.py  quantum_switch.py  quantum_theorems.py  requirements.txt  server.py  start.sh
quantum/plugins/: collapse_strategy.lua  ghost_strategy.lua  homotopy_validator.lua  lsc_monitor.lua  vhgpu_farm.lua
scripts/: deploy-anchor.ts
server/: .env.example  package-lock.json  package.json  server.js
src/: App.tsx  index.css  router.tsx
src/collapse/: collapseAlgebra.ts
src/components/: ActiveTerminal.tsx  AnacroclastiaPanel.tsx  AnimusSubstratesPanel.tsx  AntiSybilLab.tsx  BottomBar.tsx  ChimeraExchangePanel.tsx  Hero.tsx  (+44 more)
void_core/: Cargo.toml
void_core/pkg/: void_core.d.ts  void_core.js  void_core_bg.wasm  void_core_bg.wasm.d.ts
void_core/src/: ldk.rs  lib.rs
(+123 files in other folders)
