[package]
name = "void_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sha3 = "0.10"
curve25519-dalek = { version = "4.0", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
js-sys = "0.3"
hex = "0.4"
console_error_panic_hook = "0.1"
ml-kem = "0.3.2"
ml-dsa = "0.1.0-rc.11"
bulletproofs = "4.0.0"
merlin = "3.0.0"
curve25519-dalek-ng = "4"
blake3 = "1.5.0"
